@@ -8,9 +8,16 @@ use inc::Module::Install;
 # Definition.
 abstract 'Config utilitites.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.05;
+author_requires 'Test::More' => 0;
+author_requires 'Test::NoWarnings' => 0;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Config-Utils';
 readme_from 'Utils.pm';
+recursive_author_tests('xt');
 requires 'Error::Pure' => 0.09;
 requires 'Exporter' => 0;
 requires 'Readonly' => 0;
@@ -20,11 +27,8 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 resources 'homepage' => 'https://github.com/tupinek/Config-Utils';
 resources 'repository' => 'git://github.com/tupinek/Config-Utils';
 test_requires 'English' => 0;
-test_requires 'File::Object' => 0.05;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.06';
 
