@@ -1,4 +1,5 @@
 0.06
+ - Move author tests to xt/ directory.
  - Update LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.16 version.
  - Update SEE ALSO section in doc.
